--- a/a10-exercise.html
+++ b/a10-exercise.html
@@ -10,31 +10,81 @@
     <title>Twitter Cat</title>
     <style>
       .twitter-account {
-        height: 100px;
-        width: 400px;
-        display: inline-block;
-      }
-
-      .profile {
-        width: 100px;
-        height: 100px;
-      }
-
-      .cat-profile {
-        width: 68px;
-        height: 68px;
-        border-radius: 50px;
+        height: 80px;
+        width: 430px;
         display: block;
       }
 
-      .data-part {
-        width: 200px;
-        height: 100px;
+      .profile {
+        width: 80px;
+        height: 80px;
         display: inline-block;
+        vertical-align: top;
       }
 
-      .p {
-        font-family: Roboto, Arial;
+      .cat-profile {
+        width: 58px;
+        height: 58px;
+        border-radius: 50px;
+        margin: 11px;
+      }
+
+      .data-part {
+        width: 190px;
+        height: 80px;
+        display: inline-block;
+        vertical-align: top;
+      }
+
+      .name {
+        display: block;
+        font-family: Arial;
+        font-weight: 700;
+        font-size: 13px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+      }
+
+      .nickname {
+        display: block;
+        font-family: Arial;
+        font-weight: 400;
+        color: rgb(143, 143, 143);
+        font-size: 13px;
+        margin-top: 10px;
+        margin-bottom: 0px;
+      }
+
+      .profession {
+        display: block;
+        font-family: Arial;
+        font-weight: 400;
+        color: rgb(143, 143, 143);
+        font-size: 13px;
+        margin-bottom: 5px;
+        margin-top: 10px;
+      }
+
+      .button {
+        display: inline-block;
+        width: 100px;
+        height: 80px;
+        vertical-align: top;
+      }
+
+      .follow-button {
+        background-color: rgb(50, 148, 234);
+        color: white;
+        width: 80px;
+        height: 40px;
+        border: none;
+        border-radius: 5px;
+        font-size: 15px;
+        font-family: Arial;
+        font-weight: 600;
+        margin-left: 10px;
+        margin-top: 20px;
+        cursor: pointer;
       }
     </style>
   </head>
@@ -48,8 +98,8 @@
         <p class="nickname">the cat</p>
         <p class="profession">Popular</p>
       </div>
-      <div class="follow-button">
-        <button>Follow</button>
+      <div class="button">
+        <button class="follow-button">Follow</button>
       </div>
     </div>
   </body>
