--- a/a10-exercise.html
+++ b/a10-exercise.html
@@ -83,8 +83,15 @@
         font-family: Arial;
         font-weight: 600;
         margin-left: 10px;
-        margin-top: 21px;
+        margin-top: 20px;
         cursor: pointer;
+      }
+
+      .dog-profile {
+        width: 58px;
+        height: 58px;
+        border-radius: 50px;
+        margin: 11px;
       }
     </style>
   </head>
@@ -96,6 +103,32 @@
       <div class="data-part">
         <p class="name">oliver</p>
         <p class="nickname">the cat</p>
+        <p class="profession">Popular</p>
+      </div>
+      <div class="button">
+        <button class="follow-button">Follow</button>
+      </div>
+    </div>
+    <div class="twitter-account">
+      <div class="profile">
+        <img class="cat-profile" src="ikon/cat2.jpg" />
+      </div>
+      <div class="data-part">
+        <p class="name">Mimi</p>
+        <p class="nickname">Sleepy Cat</p>
+        <p class="profession">Popular</p>
+      </div>
+      <div class="button">
+        <button class="follow-button">Follow</button>
+      </div>
+    </div>
+    <div class="twitter-account">
+      <div class="profile">
+        <img class="dog-profile" src="ikon/dog.jpg" />
+      </div>
+      <div class="data-part">
+        <p class="name">Rex</p>
+        <p class="nickname">Happy Bulldog</p>
         <p class="profession">Popular</p>
       </div>
       <div class="button">
