--- a/google.html
+++ b/google.html
@@ -62,7 +62,7 @@
     </style>
   </head>
   <body>
-    <img class="google-logo" src="png-google.png" />
+    <img class="google-logo" src="ikon/png-google.png" />
     <input
       class="search-google"
       type="text"
