--- a/youtube.html
+++ b/youtube.html
@@ -44,11 +44,13 @@
         display: inline-block;
         width: 50px;
         vertical-align: top;
+        background-color: gray;
       }
 
       .video-info {
         display: inline-block;
-        width: 200px;
+        width: 245px;
+        background-color: gray;
       }
 
       .profile-picture {
@@ -76,7 +78,7 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-1.webp" />
+        <img class="thumbnail" src="ikon/thumbnail-1.webp" />
       </div>
       <div>
         <div class="channel-picture">
@@ -94,7 +96,7 @@
 
     <div class="video-preview">
       <div class="thumbnail-row">
-        <img class="thumbnail" src="thumbnails/thumbnail-2.webp" />
+        <img class="thumbnail" src="ikon/thumbnail-2.webp" />
       </div>
       <div>
         <div class="channel-picture">
